--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,18 @@
 </head>
 <body>
 <h1>{{ title }} template page is working!</h1>
+
+{% for obj in object_list %}
+
+<p>{{ obj.title }}</p>
+<p>{{ obj.content }}</p>
+<p>{{ obj.timestamp }}</p>
+<p>{{ obj.updated }}</p>
+<p>{{ obj.id }}</p>
+<p>{{ obj.pk }}</p>
+<br>
+
+{% endfor %}
+
 </body>
 </html>
