--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
 
 {% for obj in object_list %}
 
-<p>{{ obj.title }}</p>
+<!-- <p><a href='{% url "posts:detail" id=obj.id %}'>{{ obj.title }}</a></p> -->
+
+<p><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></p>
 <p>{{ obj.content }}</p>
 <p>{{ obj.timestamp }}</p>
 <p>{{ obj.updated }}</p>
