--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,6 +4,20 @@
 	<title>Template</title>
 </head>
 <body>
+
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    	<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+    	{% if "html_safe" in message.tags %}
+    		{{ message|safe }}
+    	{% else %}
+    		{{ message }}
+    	{% endif %}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 <h1>{{ title }}</h1>
 
 <p>{{ instance.title }}</p>
