--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,22 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Template</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    	<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-    	{% if "html_safe" in message.tags %}
-    		{{ message|safe }}
-    	{% else %}
-    		{{ message }}
-    	{% endif %}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+{% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
+
+{% block content %}
 
 <h1>{{ title }}</h1>
 
@@ -25,7 +11,6 @@
 <p>{{ instance.timestamp }}</p>
 <p>{{ instance.updated }}</p>
 <p>{{ instance.id }}</p>
-<p>{{ instance.pk }}</p>
+<!-- <p>{{ instance.pk }}</p> -->
 
-</body>
-</html>
+{% endblock content %}
