--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+{% extends "base.html" %}
 
+{% block content %}
+<!-- {{ block.super }} -->
+
+<h1>Form</h1>
 <form method="POST" action="">
 {% csrf_token %}
-<h1>Form</h1>
 {{ form.as_p }}
 <input type="submit" value="Create post">
 </form>
 
-</body>
-</html>
+{% endblock content %}
