--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +7,10 @@
 	        Try Django 1.9
 	    {% endblock head_title %}
 	</title>
+	<link rel="stylesheet" href='{% static "css/base.css" %}'>
+	<style>
+		{% block style %}{% endblock style %}
+	</style>
 </head>
 <body>
 
