--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,13 +4,12 @@
 
 {% block content %}
 
-<h1>{{ title }}</h1>
+<div class='col-sm-6 col-sm-offset-3'>
 
-<p>{{ instance.title }}</p>
-<p>{{ instance.content }}</p>
-<p>{{ instance.timestamp }}</p>
-<p>{{ instance.updated }}</p>
-<p>{{ instance.id }}</p>
-<!-- <p>{{ instance.pk }}</p> -->
+<h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
+
+<p>{{ instance.content|linebreaks }}</p>
+
+</div>
 
 {% endblock content %}
