--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -2,20 +2,25 @@
 
 {% block content %}
 
-<h1>{{ title }} template page is working!</h1>
+<div class="col-sm-6 col-sm-offset-3">
+<h1>{{ title }}</h1>
 
 {% for obj in object_list %}
 
-<!-- <p><a href='{% url "posts:detail" id=obj.id %}'>{{ obj.title }}</a></p> -->
-
-<p><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></p>
-<p>{{ obj.content }}</p>
-<p>{{ obj.timestamp }}</p>
-<p>{{ obj.updated }}</p>
-<p>{{ obj.id }}</p>
-<!-- <p>{{ obj.pk }}</p> -->
-<br>
+<div class="row">
+  <div class="col-sm-12">
+    <div class="thumbnail">
+      <img src="..." alt="...">
+      <div class="caption">
+        <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
+        <p>{{ obj.content|linebreaks|truncatechars:120 }} <small>{{ obj.timestamp |timesince}} ago</small></p>
+        <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endfor %}
 
+</div>
 {% endblock content %}
