--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -10,8 +10,10 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="thumbnail">
-      <img src="..." alt="...">
-      <div class="caption">
+        {% if obj.image %}
+        <img src="{{ obj.image.url }}" class="img-responsive">
+        {% endif %}
+        <div class="caption">
         <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
         <p>{{ obj.content|linebreaks|truncatechars:120 }} <small>{{ obj.timestamp |timesince}} ago</small></p>
         <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
