--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -12,7 +12,15 @@
 
 <h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
 
+<a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">Facebook</a>
+
+<a href="https://twitter.com/home?status={{ share_string }}%20{{ request.build_absolute_uri }}">Twitter</a>
+
+<a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}'>Google+</a>
+
 <p>{{ instance.content|linebreaks }}</p>
+
+<!-- <p>{{ share_string }}</p> -->
 
 </div>
 
