--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load urlify %}
 
 {% block head_title %}{{ instance.title }} | {{ block.super }}{% endblock head_title %}
 
@@ -10,17 +11,18 @@
 <img src="{{ instance.image.url }}" class="img-responsive">
 {% endif %}
 
-<h1>{{ title }} <small>{{ instance.timestamp }}</small></h1>
+<h1>{{ title }} <small>{{ instance.timestamp|timesince }}</small></h1>
 
 <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">Facebook</a>
 
-<a href="https://twitter.com/home?status={{ share_string }}%20{{ request.build_absolute_uri }}">Twitter</a>
+<a href="https://twitter.com/home?status={{ instance.content|urlify }}%20{{ request.build_absolute_uri }}">Twitter</a>
 
 <a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}'>Google+</a>
 
 <p>{{ instance.content|linebreaks }}</p>
 
-<!-- <p>{{ share_string }}</p> -->
+<p>{{ share_string }}</p>
+<p>{{ instance.content|urlify }}</p>
 
 </div>
 
