--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -12,6 +12,10 @@
 {% endif %}
 
 <h1>{{ title }} <small>{{ instance.timestamp|timesince }}</small></h1>
+<p>Nickname: {{ instance.user }}</p>
+{% if instance.user.get_full_name %}
+<p>Author: {{ instance.user.get_full_name }}</p>
+{% endif %}
 
 <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">Facebook</a>
 
@@ -21,8 +25,10 @@
 
 <p>{{ instance.content|linebreaks }}</p>
 
+<!--
 <p>{{ share_string }}</p>
 <p>{{ instance.content|urlify }}</p>
+-->
 
 </div>
 
