--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -16,6 +16,9 @@
         <div class="caption">
         <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
         <p>{{ obj.content|linebreaks|truncatechars:120 }} <small>{{ obj.timestamp |timesince}} ago</small></p>
+        {% if obj.user.get_full_name %}
+            <p>Author: {{ obj.user.get_full_name }}</p>
+        {% endif %}
         <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">View</a></p>
       </div>
     </div>
